fixes text align in news page

--- a/styles/news/news.scss
+++ b/styles/news/news.scss
@@ -63,6 +63,7 @@ main{
                 flex-direction: column;
                 margin: 2em 0em;
                 align-items: flex-start;
+                text-align: left;
             }
 
             .news-content{
